# memspan

./: .gitignore  CHANGELOG.md  Cargo.toml  GRAPHQL_SIMD_LEXER_PLAN.md  README-zh_CN.md  README.md
.github/workflows/: benchmark.yml  ci.yml  coverage.yml  loc.yml
benches/: skip_ascii_class.rs  skip_class_macro.rs  skip_lexer_class.rs  skip_until.rs  skip_while.rs
ci/: miri_sb.sh  miri_tb.sh
src/: lib.rs  needles.rs  utils.rs
src/needles/: arch.rs
src/needles/arch/: aarch64.rs  wasm32.rs  x86.rs
src/skip/: avx2.rs  avx512.rs  mod.rs  neon.rs  simd128.rs  sse42.rs
tests/: count_find.rs  coverage_gaps.rs  needle_counts.rs  skip_ascii_class.rs  skip_ascii_classes.rs  skip_class_macro.rs  skip_lexer_class.rs  skip_until.rs  skip_while.rs
